--- a/calendar.html
+++ b/calendar.html
@@ -27,8 +27,8 @@ button::-moz-focus-inner {
 
 #calendari {
     margin:  0 auto;
-    /* height: 430px; */
-    /* width: 450px; */
+    /* height: 330px; */
+    /* width: 350px; */
     font-size: 14px;
     /* box-shadow: 0px 1px 4px rgba(0,0,0,0.4); */
 }
@@ -63,7 +63,7 @@ td:last-child, th:last-child {
 th {
     border-top: 1px solid rgba(0,0,0,0.1);
     border-right: 1px solid rgba(0,0,0,0.1);
-    background-color: #5C8D9B;
+    background-color: #9b59b6;
     color: #fff;
     text-shadow: 0px -1px 0px rgba(0,0,0,0.2);
     font-weight: normal;
@@ -95,11 +95,11 @@ td:nth-child(even)>span {
 }
 td:last-child>span,
 td:nth-child(6)>span {
-    color: #5C8D9B;
+    color: #9b59b6;
 }
 td.avui>span {
     font-weight: bold;
-    background-color: ##5C8D9B;
+    background-color: #9b59b6;
     color: #fff;
     border: 2px solid rgba(0,0,0,0.1);
 }
@@ -107,7 +107,7 @@ td.fora > span {
     opacity: 0.2;
 }
 td > span:hover {
-    background: #89D2E7;
+    background: #a57cb6;
     color: #fff;
 }
 .boto-next, .boto-prev {
