--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a class="weatherwidget-io" href="https://forecast7.com/en/40d71n74d01/new-york/" data-label_1="NEW YORK" data-label_2="WEATHER" >NEW YORK WEATHER</a>
+<a class="weatherwidget-io" href="https://forecast7.com/en/47d83n117d34/colbert/?unit=us" data-label_1="COLBERT" data-label_2="WEATHER" data-icons="Climacons Animated" data-mode="Current" data-days="3" >COLBERT WEATHER</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
 </script>
